fix overflow

--- a/src/pages/Header/Header.scss
+++ b/src/pages/Header/Header.scss
@@ -13,17 +13,15 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	justify-content: center;
+	align-items: center;
 
-	/* padding-top: 7rem; */
 	@media screen and (min-width: 2000px) {
 		padding-top: 8rem;
 	}
-	@media screen and (max-width: 1000px) {
+	@media screen and (max-width: 768px) {
 		padding-top: 8rem;
 		flex-direction: column;
-	}
-	@media screen and (max-width: 450px) {
-		padding: 6rem 1rem 2rem;
 	}
 }
 
@@ -57,8 +55,9 @@
 		width: auto;
 	}
 	.tag-cmp {
+		padding-top: 0rem;
 		flex-direction: column;
-		margin-top: 3rem;
+		margin-top: 2rem;
 		p {
 			width: 100%;
 			text-transform: uppercase;
@@ -83,8 +82,8 @@
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: flex-start;
-	height: 100%;
-	margin-left: 5rem;
+
+	//small circle images
 	div {
 		width: 100px;
 		height: 100px;
@@ -102,9 +101,14 @@
 		height: 125px;
 	}
 	div:nth-child(2) {
-		margin: 1.75rem;
+		margin: 3.75rem;
 		width: 150px;
 		height: 150px;
+	}
+	div:nth-child(3) {
+		margin: 1.25rem;
+		width: 100px;
+		height: 100px;
 	}
 	@media screen and (min-width: 2000px) {
 		margin-left: 0rem;
@@ -123,32 +127,48 @@
 			height: 150px;
 		}
 	}
-	@media screen and (max-width: 1000px) {
+	@media screen and (max-width: 768px) {
+		margin-top: 3rem;
 		width: 100%;
 		flex-direction: row;
 		flex-wrap: wrap;
-		margin-left: 0;
+		div:nth-child(1) {
+			width: 125px;
+			height: 125px;
+			margin: 0em;
+		}
+		div:nth-child(2) {
+			width: 60px;
+			height: 60px;
+			margin: 0em;
+		}
+		div:nth-child(3) {
+			width: 90px;
+			height: 90px;
+			margin: 0em;
+		}
 	}
 }
 
 .app__header-img {
 	flex: 1;
+
 	height: 100%;
 	display: flex;
-	padding-left: 6rem;
+	width: 60%;
 	justify-content: center;
 	align-items: center;
 	position: relative;
+
 	img {
-		width: 100%;
+		width: 80%;
 		max-width: 500px;
 		object-fit: contain;
 		z-index: 1;
 	}
 	@media screen and (max-width: 768px) {
 		img {
-			width: 100%;
-			margin-left: -6rem;
+			width: 80%;
 			max-width: 400px;
 			object-fit: contain;
 			z-index: 1;
